--- a/index/TP1.html
+++ b/index/TP1.html
@@ -84,7 +84,7 @@
                             <img src="https://picsum.photos/600/400?random=3" alt="slide1">
                         </div>
                         <div class="px-2 pt-2 d-flex flex-column descriSec align-items-center">
-                            <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti voluptate placeat itaque ut laborum dolorum, rerum labore neque eum mollitia nisi, facilis, eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
+                            <p class="text-center">Corrupti voluptate placeat itaque ut laborum dolorum, rerum labore neque eum mollitia nisi, facilis, eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
                             <a name="" id="" class="btn btn-secondary btn-block" ">Voir plus</a>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                             <img src="https://picsum.photos/600/400?random=4" alt="slide1">
                         </div>
                         <div class="px-2 pt-2 d-flex flex-column descriSec align-items-center">
-                            <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti voluptate placeat itaque ut laborum dolorum, rerum labore neque eum mollitia nisi, facilis, eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
+                            <p class="text-center">Corrupti voluptate placeat itaque ut laborum dolorum, rerum labore neque eum mollitia nisi, facilis, eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
                             <a name="" id="" class="btn btn-secondary btn-block" >Voir plus</a>
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                             <img src="https://picsum.photos/600/400?random=5" alt="slide3">
                         </div>
                         <div class="px-2 pt-2 d-flex flex-column descriSec align-items-center">
-                            <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti voluptate placeat itaque ut laborum dolorum, rerum labore neque eum mollitia nisi, facilis, eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
+                            <p class="text-center">Corrupti voluptate placeat itaque ut laborum dolorum, rerum labore neque eum mollitia nisi, facilis, eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
                             <a name="" id="" class="btn btn-secondary btn-block">Voir plus</a>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                             <a href="" class="rounded-circle"><img src="assets/img/hum2.jpg" ></a>
                         </div>
                         <div class="px-2 pt-2 d-flex flex-column descriSec align-items-center">
-                            <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti voluptate placeat itaque ut laborum dolorum, rerum labore neque eum mollitia nisi, facilis, eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
+                            <p class="text-center">Corrupti voluptate placeat itaque ut laborum dolorum, rerum labore neque eum mollitia nisi, facilis, eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
                             <a name="" id="" class="btn btn-secondary" href="#" role="button">Voir plus</a>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                             <a href=""  class="rounded-circle"><img src="assets/img/hum5.jpg" alt="Third slide"></a>
                         </div>
                         <div class="px-2 pt-2 d-flex flex-column descriSec align-items-center">
-                            <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti voluptate placeat itaque ut laborum dolorum, rerum labore neque eum mollitia nisi, facilis, eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
+                            <p class="text-center">Corrupti voluptate placeat itaque ut laborum dolorum, rerum labore neque eum mollitia nisi, facilis, eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
                             <a name="" id="" class="btn btn-secondary" href="#" role="button">Voir plus</a>
                         </div>
                     </div>
@@ -147,7 +147,7 @@
                             <a href=""  class="rounded-circle"><img src="assets/img/hum4.jpg" alt="Third slide"></a>
                         </div>
                         <div class="px-2 pt-2 d-flex flex-column descriSec align-items-center">
-                            <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti voluptate placeat itaque ut laborum dolorum, rerum labore neque eum mollitia nisi, facilis, eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
+                            <p class="text-center">Corrupti voluptate placeat itaque ut laborum dolorum, rerum labore neque eum mollitia nisi, facilis, eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
                             <a name="" id="" class="btn btn-secondary" href="#" role="button">Voir plus</a>
                         </div>
                     </div>
