--- a/index/TP1.html
+++ b/index/TP1.html
@@ -84,7 +84,7 @@
                             <img src="https://picsum.photos/600/400?random=3" alt="slide1">
                         </div>
                         <div class="px-2 pt-2 d-flex flex-column descriSec align-items-center">
-                            <p class="text-center">Corrupti voluptate placeat itaque ut laborum dolorum, rerum labore neque eum mollitia nisi, facilis, eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
+                            <p class="text-center">Corrupti voluptate placeat itaque ut laborum dolorum eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
                             <a name="" id="" class="btn btn-secondary btn-block" ">Voir plus</a>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                             <img src="https://picsum.photos/600/400?random=4" alt="slide1">
                         </div>
                         <div class="px-2 pt-2 d-flex flex-column descriSec align-items-center">
-                            <p class="text-center">Corrupti voluptate placeat itaque ut laborum dolorum, rerum labore neque eum mollitia nisi, facilis, eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
+                            <p class="text-center">Corrupti voluptate placeat itaque ut laborum dolorum eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
                             <a name="" id="" class="btn btn-secondary btn-block" >Voir plus</a>
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                             <img src="https://picsum.photos/600/400?random=5" alt="slide3">
                         </div>
                         <div class="px-2 pt-2 d-flex flex-column descriSec align-items-center">
-                            <p class="text-center">Corrupti voluptate placeat itaque ut laborum dolorum, rerum labore neque eum mollitia nisi, facilis, eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
+                            <p class="text-center">Corrupti voluptate placeat itaque ut laborum dolorum eos praesentium iste voluptates distinctio cum voluptatum soluta?</p>
                             <a name="" id="" class="btn btn-secondary btn-block">Voir plus</a>
                         </div>
                     </div>
@@ -164,7 +164,7 @@
                 <div class="col-12 col-lg-6 d-flex justify-content-center flex-column">
                     <p><span>Tel: </span><a href="tel:+212665450744">+212665450744</a></p>
                     <p><span>Mail: <a href="mailto:lamchamar.ayoub@gmail.com">lamchamar.ayoub@gmail.com</a></span></p>
-                    <p>soyez les bienvenue.</p>
+                    <p style="font-size:160%;">soyez les bienvenue.</p>
                 </div>
 
                 <div class="col-12 col-lg-6">
